--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.psd filter=lfs diff=lfs merge=lfs -text
 *.plo filter=lfs diff=lfs merge=lfs -text
 /cross/bin/i686-elf-gdb filter=lfs diff=lfs merge=lfs -text
+gcc-dependencies/src/build-gdb/gdb/gdb filter=lfs diff=lfs merge=lfs -text
