--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.plo filter=lfs diff=lfs merge=lfs -text
 /cross/bin/i686-elf-gdb filter=lfs diff=lfs merge=lfs -text
 gcc-dependencies/src/build-gdb/gdb/gdb filter=lfs diff=lfs merge=lfs -text
+gcc-dependencies/src/build-gcc/gcc/cc1 filter=lfs diff=lfs merge=lfs -text
