--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@ gcc-dependencies/src/build-gdb/gdb/gdb filter=lfs diff=lfs merge=lfs -text
 gcc-dependencies/src/build-gcc/gcc/cc1 filter=lfs diff=lfs merge=lfs -text
 gcc-dependencies/src/build-gcc/gcc/cc1plus filter=lfs diff=lfs merge=lfs -text
 gcc-dependencies/src/build-gcc/gcc/lto-dump filter=lfs diff=lfs merge=lfs -text
+gcc-dependencies/src/build-gcc/gcc/lto1 filter=lfs diff=lfs merge=lfs -text
