--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@ gcc-dependencies/src/build-gcc/gcc/cc1 filter=lfs diff=lfs merge=lfs -text
 gcc-dependencies/src/build-gcc/gcc/cc1plus filter=lfs diff=lfs merge=lfs -text
 gcc-dependencies/src/build-gcc/gcc/lto-dump filter=lfs diff=lfs merge=lfs -text
 gcc-dependencies/src/build-gcc/gcc/lto1 filter=lfs diff=lfs merge=lfs -text
+cross/bin/i686-elf-lto-dump filter=lfs diff=lfs merge=lfs -text
