--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,4 @@ gcc-dependencies/src/build-gcc/gcc/lto1 filter=lfs diff=lfs merge=lfs -text
 cross/bin/i686-elf-lto-dump filter=lfs diff=lfs merge=lfs -text
 cross/libexec/gcc/i686-elf/14.1.0/cc1 filter=lfs diff=lfs merge=lfs -text
 cross/libexec/gcc/i686-elf/14.1.0/cc1plus filter=lfs diff=lfs merge=lfs -text
+cross/libexec/gcc/i686-elf/14.1.0/lto1 filter=lfs diff=lfs merge=lfs -text
